syntax = "proto3";
import "google/api/annotations.proto";

package camping;

service CampingService {
    rpc GetAllSites(GetAllSitesRequest) returns (GetAllSitesResponse) {
            option (google.api.http) = {
              get: "/v1/camping/sites"
            };
          }

    rpc GetNationalForest(GetNationalForestRequest) returns (GetNationalForestResponse) {
            option (google.api.http) = {
              get: "/v1/camping/forest/{id}"
            };
          }

    rpc GetDistrict(GetDistrictRequest) returns (GetDistrictResponse) {
            option (google.api.http) = {
              get: "/v1/camping/district/{id}"
            };
          }
}

message Site {
  int64 id = 1;
  float latitude = 2;
  float longitude = 3;
  int64 national_forest_id = 4;
  int64 district_id = 5;
  int64 altitude = 6;
  string notes = 7;
}

message NationalForest {
  int64 id = 1;
  string name = 2;
  string website = 3;
}

message District {
  int64 id = 1;
  int64 national_forest_id = 2;
  string name = 3;
  string map_location = 4;
}

// GetAllSitesRequest is currently empty
message GetAllSitesRequest {
}

// GetAllSitesResponse contains information regarding a camp site
message GetAllSitesResponse {
  repeated Site sites = 1;
}

message GetNationalForestRequest {
  int64 id = 1;
}

message GetNationalForestResponse {
  NationalForest forest = 1;
}

message GetDistrictRequest {
  int64 id = 1;
}

message GetDistrictResponse {
  District district = 1;
}